# sspp

./: .gitignore  AUTHORS  COPYING  ChangeLog  README.md  bootstrap  configure.ac
include/: Makefile.am
include/greet/: greet.h
include/potato/: potato.h
src/lib/: Makefile.am
src/lib/libgreet/: Makefile.am  greet.c
src/lib/libpotato/: Makefile.am  potato-emitter.c  potato-emitter.h  potato.c
